@@ -363,7 +363,7 @@ d761eaf98f84e709ee2651ad25f5bea49684c80e data\mmorpg\affixes\suffix\of_critical_
 eb971eb86ee8cdd584af5d33c2401434d9333123 data\mmorpg\affixes\suffix\of_critical_hits.json
 bcb77cbf114036e529945cdc284721c815dca52f data\mmorpg\affixes\suffix\of_critical_unity.json
 ec02baaf777d9317c6d1e65d9186b0b92f9ab8ad data\mmorpg\affixes\suffix\of_crossbow_flurry.json
-855880eb865c7dd74f162999e9e9c0fad15daf32 data\mmorpg\affixes\suffix\of_ele_resist.json
+a41f6ad1ae4e4d107f8829d2829aed0e23642f8c data\mmorpg\affixes\suffix\of_ele_resist.json
 18bd648e6098add39b054839400b3019582f2edf data\mmorpg\affixes\suffix\of_exhaustion.json
 025c0bf3c5749fb00bad0a3cfee368fada32a128 data\mmorpg\affixes\suffix\of_feebleness.json
 7ffffff30f330400c415537ce88b8b9f5760cf17 data\mmorpg\affixes\suffix\of_fire_dissonance.json
@@ -653,20 +653,20 @@ f84f1ce7a838be1f934b82167c94c27d8cb6507c data\mmorpg\recipes\mat\crystallized_es
 1ae157ed18f265da83c446ee1daf0941448526ed data\mmorpg\recipes\mat\infused_iron.json
 a03ed1a87b193f1829d9ea2a001540440d0c5539 data\mmorpg\recipes\mat\mythic_essence.json
 89e6b43e91e0217a25a3d5460b52a4b0bbd0860f data\mmorpg\recipes\teleport_scroll.json
-4f69c449cf61b3f6620db09fc4013c3b1248b695 data\mmorpg\runes\ano.json
+c121d0b0419de5574902df8484b992bb0126c225 data\mmorpg\runes\ano.json
 9373b99d25e26b012ca8b80123d8be7b162c5d9c data\mmorpg\runes\ber.json
-aa228ffa76909a04eaf7d75f3e9486fb346ec88b data\mmorpg\runes\cen.json
-f8d886073192f126de39b6892ccd9581c5fb1591 data\mmorpg\runes\dos.json
-eee1049ba83211ac628db25fb0ca52f89130950c data\mmorpg\runes\goh.json
-81b9101f37320db78e639e0f67d649a2b557e216 data\mmorpg\runes\ita.json
-b7f5e804d313d543ed12c15f1ed973e2f377ed7c data\mmorpg\runes\mos.json
+899fb845277a013d7c851121ba9eb3766dbfd9c9 data\mmorpg\runes\cen.json
+e1fcc986c82a37ac50415f24cb878b6e33969ded data\mmorpg\runes\dos.json
+b1de960b43d3c8cebf9e69225c86d9b93a2779c7 data\mmorpg\runes\goh.json
+ac376c6035b85530cf1632fc1c35df6a2ce6192d data\mmorpg\runes\ita.json
+f7ffe1d39919af717084c1a7c7e5e683ddce53a7 data\mmorpg\runes\mos.json
 cb20157d8c2a9a4e00f4194c0eee56348ff398f2 data\mmorpg\runes\oni.json
 c167d18849dd1bd2d30bb1b9bc1aa82f061d13ef data\mmorpg\runes\psi.json
-44a6661f9e539542055a8580b753a2f99dcdff76 data\mmorpg\runes\qar.json
-4abab5496e047df0ecb4c2b7af53ed7e7788c887 data\mmorpg\runes\rah.json
-74a60895956d128113575f323565f5e4e1cfaafc data\mmorpg\runes\voh.json
-039d5edaaebbc510d30113f7b8e50b719f2786f4 data\mmorpg\runes\wor.json
-29a7d63402467efd125257281c7f0a7a3f7709f3 data\mmorpg\runes\xah.json
+9cb0be506787f5535fdbcaee3baa304ae55c2672 data\mmorpg\runes\qar.json
+fcd65d68667c785e18810eb639cb785cd1fe3361 data\mmorpg\runes\rah.json
+d0e2f52a2e06bbf8ad57c7dd570b50bad87fcbd8 data\mmorpg\runes\voh.json
+f4cfeccd8fb003e47681f13c851b7baf66246f36 data\mmorpg\runes\wor.json
+27527bdcfb293fae76ebde7955456a5ffa463191 data\mmorpg\runes\xah.json
 9b58fa2256420ce10629bdfc5c88b90b0e8ea017 data\mmorpg\rune_words\2_runes\bloom.json
 209187492313231e12592101b7add91861b32c13 data\mmorpg\rune_words\2_runes\magic.json
 ab9e19f4f914b62731562e8a08f8c62ab32cb68c data\mmorpg\rune_words\2_runes\magma.json
@@ -734,9 +734,9 @@ b85d1ee7f94515b7403ae8f3e2db0f3b757d8d31 data\mmorpg\unique_gears\bracelet\brace
 c36b654a1f54c0698595ae191a8dfc39e221ed65 data\mmorpg\unique_gears\bracelet\braceletthundernature0.json
 9ccec30d673d8d1ecef5847dd93e193c04be7ba1 data\mmorpg\unique_gears\bracelet\braceletwater0.json
 9740c892d7a23863e20b876f9c48536ef096bd70 data\mmorpg\unique_gears\charm\charmfire0.json
-5b24370a45d87c2d6773cd13979fd61410ad2e13 data\mmorpg\unique_gears\charm\charmnature0.json
-284ba8f7556196c25f6cc8c6bf97a538f70d2b85 data\mmorpg\unique_gears\charm\charmthunder0.json
-7d43cf1e1be3109cf81ee6899dc5b9aae6ac398e data\mmorpg\unique_gears\charm\charmwater0.json
+5b1b1a2616a0a40b2fb60a679531504bed584d0d data\mmorpg\unique_gears\charm\charmnature0.json
+9e887d9a89d620f30f36b0d35c96f593afaec1b8 data\mmorpg\unique_gears\charm\charmthunder0.json
+954b8f6ccddf545477f2257da1818a18ba009f87 data\mmorpg\unique_gears\charm\charmwater0.json
 d08769260e8b52aac6d3b4ba8f2d2306edb62dfc data\mmorpg\unique_gears\cloth_boots\fire_cloth_boots0.json
 9d97661a8f907c3cbb6d6e069fdaf66c3a9ddb84 data\mmorpg\unique_gears\cloth_boots\nature_cloth_boots0.json
 1c39ca9d5d336204091fa7cdded655c5ee27fbc5 data\mmorpg\unique_gears\cloth_boots\thunder_cloth_boots0.json
@@ -753,12 +753,12 @@ a177cd8c092bc2cb7251be4454cd6bada201756f data\mmorpg\unique_gears\hammer\nature_
 eedfd2326613e428658db6f748e333239511647a data\mmorpg\unique_gears\leather_chest\chestdodge0.json
 4a753cca6af4b3f9f3737d349ce9cbf3780f8e09 data\mmorpg\unique_gears\necklace\necklaceenergy0.json
 44c1dee06a1fa5245b46b96fe39291f2e99757c5 data\mmorpg\unique_gears\necklace\necklacefire0.json
-b81c6bebff8441406931a27b40269b238c2dcb33 data\mmorpg\unique_gears\necklace\necklacegambler0.json
+75b2e542f70c35c6605bb631580dcecacbf9724e data\mmorpg\unique_gears\necklace\necklacegambler0.json
 87aea9efdafdff5a859fe6cc8094c3ec195d2ff6 data\mmorpg\unique_gears\necklace\necklacenature0.json
 e3759e893484d310e5d32678d10945f94f9886f7 data\mmorpg\unique_gears\necklace\necklacesetdrop0.json
 0cc20ebcc81de3d58356edfdabaa6b7bf2ca57be data\mmorpg\unique_gears\necklace\necklacethunder0.json
 98affb36349f8e7e17f4e7be21881ab404f2fa54 data\mmorpg\unique_gears\necklace\necklacewater0.json
-93de518299e41a7abd44e81b5da26a564b3f7ac1 data\mmorpg\unique_gears\necklace\necklace_magic_shield0.json
+7533cfff11d6db732b3eef1e32910c57abe1706f data\mmorpg\unique_gears\necklace\necklace_magic_shield0.json
 1676f70c239dda5532d060dd98545243dc28e723 data\mmorpg\unique_gears\necklace\necklace_strength0.json
 9fa82776809b8341599010c9727ee48e2b15bafb data\mmorpg\unique_gears\necklace\necklace_wisdom0.json
 b45c40a15ae110d04a8482c80489674f010fb84a data\mmorpg\unique_gears\plate_boots\bootsfire0.json
@@ -776,14 +776,14 @@ b6a4055c31a9980c451537eb8df1428f0ad649c1 data\mmorpg\unique_gears\plate_helmet\h
 3b10de51f74c07e801c73de4ac1da9271028dbc7 data\mmorpg\unique_gears\plate_pants\pantsfire0.json
 f030c00f817427c3b60b24feeef9c86e95aa87f8 data\mmorpg\unique_gears\plate_pants\pantsnature0.json
 ba26863244d7eae7f90f5f8b762b2e57f84942ce data\mmorpg\unique_gears\plate_pants\pantsthunder0.json
-4a42a65189d2ffc999d0bb6b5278af9bcac311a6 data\mmorpg\unique_gears\plate_pants\pantswater0.json
+0be418e0bf767c204f7e3018ab945124f457b0c7 data\mmorpg\unique_gears\plate_pants\pantswater0.json
 c6f909e44012d45d5193c4d01f7800d5b54521f8 data\mmorpg\unique_gears\ring\fire_ele_ring0.json
 1619364f43157df2935a32457b5d7e8704eacbf7 data\mmorpg\unique_gears\ring\nature_ele_ring0.json
 8371136b24c3d0d98040bcd4f2dc43fc89486ccb data\mmorpg\unique_gears\ring\ringcrit0.json
 0193c1f6d82ea78cf1dbd0bbe368996ce3ae6c53 data\mmorpg\unique_gears\ring\ringdodge0.json
 b2a5ce7f13a9f7c14e3924665e9e859dd6cb96e7 data\mmorpg\unique_gears\ring\ringenergy0.json
 cba9223ce7e760e928944ba0fedd782f33043909 data\mmorpg\unique_gears\ring\ringwaterfire0.json
-6e0904b515f3536582fe0b39db17695ce4a78428 data\mmorpg\unique_gears\ring\ring_hermit_insanity.json
+752322c23c0522b3f4412fb03bb3cda7c0e2bedb data\mmorpg\unique_gears\ring\ring_hermit_insanity.json
 a176ba7c19c7e30068e2686f29772fc7010fecc0 data\mmorpg\unique_gears\ring\ring_magic_shield0.json
 12ab7212ceb05a461f70fdfb41a32d3f06982ee4 data\mmorpg\unique_gears\ring\thunder_ele_ring0.json
 ec3b5c861aebc22f8eb5a862b35a1a96badbd8be data\mmorpg\unique_gears\ring\water_ele_ring0.json
@@ -798,7 +798,7 @@ ea7fcc857bb47b996ebb1182ce883c2bc8c7e3da data\mmorpg\unique_gears\shield\water_e
 1ae1ff6b04c148c30476f68b114b253bf1233efe data\mmorpg\unique_gears\staff\thunder_ele_staff0.json
 39ae57fc7a98b973eafdbf50bf12c04da6226f2e data\mmorpg\unique_gears\staff\uniquestafffire0.json
 261a67fb22b9cc66016216ea45cfd9c81dca7b57 data\mmorpg\unique_gears\staff\uniquestafflifesteal0.json
-eb61889e973820c7c3da4b7f84960ec9c7fa931a data\mmorpg\unique_gears\staff\uniquestaffnature0.json
+e1330e75d6b237afae7d5ddc1c79781400707046 data\mmorpg\unique_gears\staff\uniquestaffnature0.json
 4124ab1dae86dda2d5c9798516a36737868dfceb data\mmorpg\unique_gears\staff\uniquestaffthunder0.json
 acdb18f1315592bc995d092fc0237b9b36abb29b data\mmorpg\unique_gears\staff\uniquestaffwater0.json
 227e8f88e62b276fbc6edb177689a2031efeeee4 data\mmorpg\unique_gears\staff\water_ele_staff0.json
