@@ -33,6 +33,6 @@
     ]
   },
   "mods": [
-    "elemental_resist_flat"
+    "very_low_elemental_resist_flat"
   ]
 }
